@@ -1,3 +1,8 @@
+2000-04-24  Kriston J. Rehberg  <Kriston@AOL.COM>
+
+	* Added nsftp module.  Contributed by Eric O'Laughlen
+	<erico@aol.net>.
+
 2000-04-12  Kriston J. Rehberg  <Kriston@AOL.COM>
 
 	*** AOLserver 3.0 FINAL Released ***
